# mts-hr

./: README.md  constants.py  pyproject.toml  settings.py  todo.md
docs/: index.md
resume_analyser/: analyzer_utils.py  app.py  comparator.py  constants.py  deps.py  describer.py  emb.py  navigation.py  run.sh  styles.py  styles_old.py  warmup.py
resume_analyser/data/: jobs.json  matches.json  resumes.json
resume_analyser/docs/: metrics.md  todo.md  ux-cases.md  ycl_logs.md
resume_analyser/screens/: add_job.py  add_resume.py  jobs_list.py  links_input.py  matching_jobs.py  matching_resumes.py  result.py  resumes_list.py
resume_analyser/storage/: file_storage.py  interface.py
resume_analyser/utils/: common.py  logs.py  tracing.py
tools/: run_gpt.py
