[project]
name = "ta"
version = "0.1.0"
description = ""
authors = [
    {name = "idenra"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    +"streamlit (>=1.46.1,<2.0.0)",
    + "pydantic-settings (>=2.10.1,<3.0.0)",
    + numpy
    + scipy
    + "yandex-cloud-ml-sdk (>=0.12.0,<0.13.0)",
    +"pandas (>=2.3.1,<3.0.0)",
    +"beautifulsoup4 (>=4.13.4,<5.0.0)",
    +"systemd (>=0.17.1,<0.18.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
